# credit-risk-scoring

./: .gitignore  Dockerfile  README.md  data_download.py  defaults.pkl  main.ipynb  model.pkl  pyproject.toml  raw_data_schema.md
.dvc/: config
data/raw/: german_credit.csv.dvc
notebooks/: drift_report.html  drift_report.ipynb  eda.ipynb  shap_analysis.ipynb
src/credit_risk/api/: main.py
src/credit_risk/data/: loader.py
src/credit_risk/experiments/: train_ftest.py
src/credit_risk/features/: prepare.py
src/credit_risk/models/: baseline.py  train.py
tests/unit/: test_baseline.py  test_loader.py  test_prepare.py
