[project]
name = "credit-risk-scoring"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "lightgbm>=4.6.0",
    "mlflow>=3.14.0",
    "numpy>=2.5.0",
    "pandas>=2.3.3",
    "scikit-learn>=1.9.0",
    "shap",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]
